<resources>
    <string name="app_name">Advanced FIPE</string>
    <string name="advanced_fipe">Advanced FIPE</string>
    <string name="text_card_car_consult">Consulta de carros e utilitários pequenos</string>
    <string name="text_card_motorcycle_consult">Consulta de motos</string>
    <string name="text_card_truck_consult">Consulta de caminhões e micro ônibus</string>
    <string name="text_favorites">Favoritos</string>
    <string name="text_brand">Marca</string>
    <string name="text_model">Modelo</string>
    <string name="text_model_year">Ano modelo</string>
    <string name="text_button_consult">Pesquisar</string>
    <string name="text_hint_reference_period_code">Período de referência</string>
    <string name="text_hint_model_year">Ano modelo</string>
    <string name="text_hint_model">Modelo</string>
    <string name="text_hint_brand">Marca</string>
    <string name="text_hint_reference_period">Período de referência</string>
    <string name="text_button_search_by_code_fipe">Pesquisar</string>
    <string name="text_hint_model_year_by_code">Ano modelo</string>
    <string name="text_hint_by_code_fipe">Código Fipe</string>
    <string name="text_app_bar_details">Detalhes</string>
    <string name="text_references_month_details">Mês referência:</string>
    <string name="text_code_fipe_details">Código Fipe:</string>
    <string name="text_brand_details">Marca:</string>
    <string name="text_model_details">Modelo:</string>
    <string name="text_model_year_details">Ano modelo:</string>
    <string name="text_consult_date_details">Data da consulta:</string>
    <string name="text_price_details">Preço médio:</string>
    <string name="text_graphic_details">Gráfico evolutivo de preços</string>
    <string name="mes_referencia">Mês referência:</string>
    <string name="codigo_fipe">Código Fipe:</string>
    <string name="marca">Marca:</string>
    <string name="modelo">Modelo:</string>
    <string name="ano_modelo">Ano modelo:</string>
    <string name="data_da_consulta">Data da consulta:</string>
    <string name="preco_medio">Preço médio:</string>
    <string name="text_button_graphic">Gráfico evolutivo de preços</string>
    <string name="text_toolbar_result_consult">Resultado</string>
    <string name="text_button_result">Resultado</string>
    <string name="text_button_onboarding_next">Próximo</string>
    <string name="text_subtitle_onboarding_price">Você conseguirá visualizar o resultado com o preço médio do veículo consultado</string>
    <string name="text_title_onboarding_price">Pesquise o preço médio do veículo</string>
    <string name="text_title_onboarding_favorites">Favorite as consultas desejadas</string>
    <string name="text_subtitle_onboarding_favorites">Você poderá favoritar as consultas que deseja ver novamente</string>
    <string name="text_title_onboarding_graphic">Veja o gráfico evolutivo de preços</string>
    <string name="text_subtitle_onboarding_graphic">Você poderá visualizar o gráfico evolutivo de preço do veículo por mês e ano</string>
    <string name="text_title_onboarding_share">Compartilhe suas consultas</string>
    <string name="text_subtitle_onboarding_share">Você poderá compartilhar as consultas realizadas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_name_app_onboarding">ADVANCED FIPE</string>
    <string name="text_button_onboarding_back">Voltar</string>
    <string name="text_title_tab_commun_view_pager">Comum</string>
    <string name="text_title_tab_code_view_pager">Por código</string>
    <string name="text_app_bar_consult">Consulta</string>
    <string name="text_item_bottom_navigation_consult">Consulta</string>
    <string name="text_item_bottom_navigation_favorites">Favoritos</string>
    <string name="text_toolbar_favorites">Favoritos</string>
    <string name="fragment_dashboard">fragment_dashboard</string>
    <string name="onboarding_fragment">onboarding_fragment</string>
    <string name="text_menu_item_share">Compartilhar</string>
    <string name="text_share">"Veja essa consulta de veículo feita no aplicativo Advanced Fipe\nMês de referência: %s\nCódigo Fipe: %s\nMarca: %s\nModelo: %s\nAno modelo: %s\nPreço: %s"</string>
    <string name="text_share_options">Escolha uma opção</string>
    <string name="text_share_title">Consulta tabela Fipe</string>
    <string name="text_error_favorite">Falha ao favoritar o veículo</string>
    <string name="text_favorited">FAVORITADO</string>
    <string name="text_disfavor">DESFAVORITADO</string>
    <string name="text_plain_type">text/plain</string>
    <string name="text_menu_help">Ajuda</string>
    <string name="text_options_consult">Opções de consulta</string>
    <string name="text_tool_bar_tutorial">Tutorial</string>
    <string name="text_brand_list_failure">Falha na lista de marcas</string>
    <string name="text_fail_in_models_list">Falha na lista de modelos</string>
    <string name="text_fail_in_model_year_list">Falha na lista de ano modelo</string>
    <string name="failed_making_consult">Falha ao fazer a consulta</string>
    <string name="text_select_all_fields">Selecione todos os campos</string>
    <string name="text_fail_in_favorites_list">Falha na lista de favoritos</string>
    <string name="text_failure_unfavorite_item">Falha ao desfavoritar o item</string>
    <string name="text_unfavored_successfully">Desfavoritado com sucesso</string>
    <string name="text_advanced_fipe_splash">ADVANCED FIPE</string>
    <string name="text_error_displaying_chart_data">Erro ao exibir os dados do gráfico</string>
    <string name="text_price_bar_data_set">Preços</string>
</resources>