<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_reference_period_code"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="120dp"
            android:hint="@string/text_hint_reference_period_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_text_view_reference_period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:padding="18dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_code_fipe"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/text_hint_by_code_fipe"
            app:layout_constraintEnd_toEndOf="@id/text_input_layout_reference_period_code"
            app:layout_constraintStart_toStartOf="@id/text_input_layout_reference_period_code"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_reference_period_code">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_text_view_code_fipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:padding="18dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_year_code"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/text_hint_model_year_by_code"
            app:layout_constraintEnd_toEndOf="@id/text_input_layout_code_fipe"
            app:layout_constraintStart_toStartOf="@id/text_input_layout_code_fipe"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_code_fipe">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_text_view_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:padding="18dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_code_consult"
            style="@style/StyleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/text_button_search_by_code_fipe"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_year_code"
            app:layout_constraintVertical_bias="0.939" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
















